# struct-to-enum

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: common.rs  field_name.rs  field_type.rs  lib.rs
struct-to-enum/: Cargo.toml
struct-to-enum-macros/: Cargo.toml
struct-to-enum-macros/src/: common.rs  field_name.rs  field_type.rs  lib.rs  reverse.rs
struct-to-enum/src/: lib.rs
test-suite/: Cargo.toml
test-suite/field_name/: basic.rs  nested.rs
test-suite/tests/: conflict.rs  expand.rs
test-suite/tests/field_name/: basic.rs  derives.rs  generics.rs  main.rs  nested.rs  serde.rs  strum.rs
test-suite/tests/field_type/: basic.rs  clone_debug.rs  generics.rs  main.rs  nested.rs  rich_types.rs  strum.rs
test-suite/tests/no_std/: main.rs
test-suite/tests/reverse/: field_name.rs  field_type.rs  main.rs
tests/: complex.rs  conflict.rs  field_name_tests.rs  field_type_tests.rs
tests/field_name/: basic.rs  derives.rs  generics.rs  nested.rs  serde.rs  strum.rs
tests/field_type/: basic.rs  clone_debug.rs  generics.rs  main.rs  nested.rs  rich_types.rs  strum.rs
