[package]
name = "struct-to-enum"
version = "1.1.1"
rust-version = "1.85.0"
authors = ["Sinder <smirnov.sinder@gmail.com>"]
description = "Derive macros to generate enums from struct fields - compile-time safe field selection and dispatch"
readme = "../README.md"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sinder38/struct-to-enum"
keywords = ["derive", "macro", "enum", "struct", "field"]
categories = ["development-tools::procedural-macro-macros", "rust-patterns"]

[dependencies]
struct-to-enum-macros = { path = "../struct-to-enum-macros", optional = true, version = "1.0.1" }

[features]
default = ["derive"]
derive = ["struct-to-enum-macros"]
nested-type = ["struct-to-enum-macros?/nested-type"]
nested-name = ["struct-to-enum-macros?/nested-name"]
