[package]
name = "struct-to-enum-tests"
version = "0.0.0"
authors = ["Sinder <smirnov.sinder@gmail.com>"]
edition = "2024"
publish = false


[features]
nested-type = ["struct-to-enum/nested-type"]
nested-name = ["struct-to-enum/nested-name"]

[dependencies]
struct-to-enum = { path = "../struct-to-enum", features = ["derive"] }

[dev-dependencies]
strum_macros = "0.28.0"
strum = "0.28.0"
serde = { version = "1.0.228", features = ["derive"] }

[[test]]
name = "no_std"
path = "tests/no_std/main.rs"
